--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,8 +83,11 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
 
 
-
+    //Player Vimeo
     implementation "com.vimeo.networking:vimeo-networking:1.1.3"
+    //Upload Vimeo
+    implementation 'io.tus.java.client:tus-java-client:0.4.1'
+    implementation 'io.tus.android.client:tus-android-client:0.1.8'
 
 }
 
