--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     implementation 'androidx.annotation:annotation:1.0.0'
     implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
-    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'io.tus.android.client:tus-android-client:0.1.8'
+    implementation 'io.tus.java.client:tus-java-client:0.4.1'
 }
 
 
