--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,8 @@ dependencies {
     implementation 'io.tus.java.client:tus-java-client:0.4.1'
     implementation 'io.tus.android.client:tus-android-client:0.1.8'
 
-    implementation 'io.tus.android.client:tus-android-client:0.1.8'
-    implementation 'io.tus.java.client:tus-java-client:0.4.1'
+    //Custom claims
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
 }
 
 
