--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        config {
-
-        }
-    }
     compileSdkVersion 26
     defaultConfig {
         resConfigs "en", "fr"
         applicationId "fr.vyfe"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 13
+        versionCode 18
         versionName "1.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -20,7 +15,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
         }
     }
     lintOptions {
@@ -32,10 +26,11 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
-    buildToolsVersion '28.0.3'
     // Temporary fix until alpha10
     packagingOptions {
         exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+    productFlavors {
     }
 }
 
@@ -57,18 +52,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-functions:16.2.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation "com.vimeo.networking:vimeo-networking:1.1.3"
+    implementation 'com.vimeo.networking:vimeo-networking:1.1.3'
     implementation 'io.tus.java.client:tus-java-client:0.4.1'
     implementation 'io.tus.android.client:tus-android-client:0.1.8'
-
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
-
     api 'com.google.guava:guava:26.0-android'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.0.5-beta'
-
     implementation 'androidx.test.espresso:espresso-core:3.1.1'
-    androidTestImplementation "androidx.test.ext:junit:1.1.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
     androidTestImplementation 'androidx.test:core:1.1.0'
