--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-config:16.5.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 android.variantFilter { variant ->
