--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
             signingConfig signingConfigs.prod
         }
         staging {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "String", "FIREBASE_DATABASE_URL", FIREBASE_DATABASE_URL_STAGING
             buildConfigField "String", "DB_PREFIX", '"staging"'
             signingConfig signingConfigs.prod
@@ -60,7 +62,6 @@ android {
     packagingOptions {
         exclude 'META-INF/proguard/androidx-annotations.pro'
     }
-
 }
 
 repositories {
@@ -73,6 +74,7 @@ configurations {
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -85,25 +87,26 @@ dependencies {
     implementation 'com.vimeo.networking:vimeo-networking:1.1.3'
     implementation 'io.tus.java.client:tus-java-client:0.4.1'
     implementation 'io.tus.android.client:tus-android-client:0.1.8'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
     api 'com.google.guava:guava:26.0-android'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.0.5-beta'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
     androidTestImplementation 'androidx.test:core:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-config:16.5.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 android.variantFilter { variant ->
-    if(variant.buildType.name.equals('release') || variant.buildType.name.equals('debug')) {
+    if (variant.buildType.name.equals('release') || variant.buildType.name.equals('debug')) {
         variant.setIgnore(true)
     }
 }
