--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 26
@@ -11,7 +12,7 @@ android {
         targetSdkVersion 26
         versionCode 20
         versionName "1.2.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
         dev {
@@ -70,39 +71,55 @@ repositories {
 
 configurations {
     cleanedAnnotations
-    compile.exclude group: 'org.jetbrains' , module:'annotations'
+    compile.exclude group: 'org.jetbrains', module: 'annotations'
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation('com.android.support:appcompat-v7:26.1.0') {
+        exclude group: 'com.google', module: 'firebase'
+    }
+    implementation('com.android.support:design:26.1.0') {
+        exclude group: 'com.google', module: 'firebase'
+    }
+    implementation('com.android.support:cardview-v7:26.1.0') {
+        exclude group: 'com.google', module: 'firebase'
+    }
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.7'
+
+    //Warning : Library in version conflict with andoid.support{appcompat, design, cardview}
+    //TODO upgrade with AndroidX (compile SDK 28)
+    implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-functions:16.2.0'
+    implementation 'com.google.firebase:firebase-config:16.5.0'
+    implementation('com.google.firebase:firebase-inappmessaging-display:17.0.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.vimeo.networking:vimeo-networking:1.1.3'
     implementation 'io.tus.java.client:tus-java-client:0.4.1'
     implementation 'io.tus.android.client:tus-android-client:0.1.8'
-    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
+
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
     api 'com.google.guava:guava:26.0-android'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.0.5-beta'
-    implementation 'androidx.test.espresso:espresso-core:3.1.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
-    androidTestImplementation 'androidx.test:core:1.1.0'
-    androidTestImplementation 'androidx.test:rules:1.1.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation('com.android.support.test:runner:1.0.2') {
+        exclude group: 'com.google', module: 'firebase'
+    }
+    androidTestImplementation 'androidx.test:runner:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-config:16.5.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 android.variantFilter { variant ->
@@ -111,4 +128,4 @@ android.variantFilter { variant ->
     }
 }
 
-apply plugin: 'com.google.gms.google-services'
+
